--- a/src/components/Intro.astro
+++ b/src/components/Intro.astro
@@ -4,6 +4,7 @@
 
 <script>
   import gsap from "gsap";
+  import { setIntroComplete } from "../stores/introStore";
   import { LifecycleManager } from "../scripts/animationLifecycle.ts"
 
   const manager = new LifecycleManager();
@@ -19,6 +20,13 @@
           opacity: 0,
           delay: 1,
           ease: "power2.inOut",
+          onComplete: () => {
+            setIntroComplete(true);
+            const el = document.querySelector(".intro");
+            if (el) {
+              el.remove();
+            }
+          },
         }
       );
     }
