:zap: made native implementation of custom mouse

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,6 +7,7 @@ import { ClientRouter } from "astro:transitions";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import Intro from "../components/Intro.astro";
+import Mouse from "../components/Mouse.astro";
 ---
 <!doctype html>
 <html lang="en">
@@ -19,6 +20,7 @@ import Intro from "../components/Intro.astro";
 		<title>Gustavo Gomez - Full Stack Developer</title>
 	</head>
 	<body>
+		<Mouse />
 		<Intro />
 		<Header />
 		<slot />
