--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Hero from '../components/Hero.astro';
 import Spacer from '../components/Padding.astro';
 import Layout from '../layouts/Layout.astro';
 
+
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
 ---
@@ -11,3 +12,9 @@ import Layout from '../layouts/Layout.astro';
 	<Hero />
 	<Spacer />
 </Layout>
+
+<script>
+	import { initSmoothScrolling } from "../scripts/smoothScroll.ts";
+
+	initSmoothScrolling();
+</script>
