--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -97,7 +97,7 @@ import '@fontsource/meddon';
     .main-section {
       @apply text-center;
       h1 {
-        @apply text-[100px] font-black leading-tight text-black;
+        @apply text-[100px] font-medium leading-tight text-black;
         span {
           @apply inline-block;
           &.line {
