--- a/src/components/Mouse.astro
+++ b/src/components/Mouse.astro
@@ -123,6 +123,8 @@ body .cursor__circle {
   position: fixed;
   top: 0;
   left: 0;
+  width: 8px;
+  height: 8px;
   mix-blend-mode: difference;
   z-index: 10;
   transform: translateX(-50%) translateY(-50%);
