--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -68,6 +68,10 @@
       format("woff");
 }
 
-body {
-  font-family: "Pretendard", sans-serif;
+@layer base {
+  body {
+    font-family: "Pretendard", sans-serif;
+    overflow-x: hidden;
+  }
 }
+
