--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -72,6 +72,9 @@
   body {
     font-family: "Pretendard", sans-serif;
     overflow-x: hidden;
+    cursor: none;
+    a {
+      cursor: none;
+    }
   }
 }
-
